# AgentRepo

./: .gitignore  Agent.py  COVERAGE_MATRIX.md  QUALITY_GATE_REPORT.md  WarehouseEnv.py  agent_registry.py  batch_runner.py  config.py  execution.py  game_logger.py  game_runner.py  log_replay.py  logging_contract.py  main.py  pyproject.toml  simulation.py  submission.py
tests/: conftest.py  test_smoke.py  test_unit.py
tests/fixtures/: batch_game.jsonl  batch_game.txt  custom_map_game.jsonl  custom_map_game.txt  gui_game.txt
ui/: __init__.py  board_renderer.py  constants.py  widgets.py
ui/screens/: __init__.py  batch_screen.py  batch_setup.py  file_select.py  game_screen.py  map_builder.py  opening.py  replay.py  single_setup.py
